...
            android:layout_below="@id/textTitle" />

        <ScrollView
            android:id="@+id/scrollTabla"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/btnGuardarConfig"
            android:layout_below="@id/Space"
            android:fillViewport="true">

            <TableLayout
                android:id="@+id/tablaFiltros"
                android:layout_width="match_parent"
...
                        android:background="#99FFFFFF"
                        android:orientation="horizontal">



                        <Button
                            android:id="@+id/btnCombustibles"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="Mostrar tipos"
                            tools:text="Mostrar tipos" />
                    </LinearLayout>
...
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:text="Marca"
                        android:textColor="#000000" />

                    <Spinner
                        android:id="@+id/spinnerMarca"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#BAFFFFFF"
                        android:visibility="visible" />

...
        </ScrollView>

        <Button
            android:id="@+id/btnGuardarConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnAceptar"
            android:layout_alignParentBottom="false"
            android:layout_weight="3"
            android:text="Guardar configuración"
            android:visibility="visible" />

        <Button
...
