...
    android:id="@+id/relativeLayoutGasolinera"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/checkGasolinera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|center_vertical"
        app:layout_constraintLeft_toLeftOf="@id/imageViewLogo" />

    <ImageView
...
        android:layout_marginTop="@dimen/marginLogo"
        android:layout_marginRight="@dimen/marginLogo"
        android:layout_marginBottom="@dimen/marginLogo"
        android:layout_toRightOf="@id/checkGasolinera" />

    <TextView
        android:id="@+id/textViewRotulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTextView"
        android:layout_toRightOf="@+id/imageViewLogo"
        android:textStyle="bold" />

...
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewGasoleoA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/textViewGasoleoALabel"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/textViewGasoleoALabel"
                app:layout_constraintTop_toTopOf="@+id/textViewGasoleoALabel" />
...
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewGasoleoALabel" />

            <TextView
                android:id="@+id/textViewGasoleoB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/textViewGasoleoBLabel"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/textViewGasoleoBLabel"
                app:layout_constraintTop_toBottomOf="@+id/textViewGasoleoALabel" />
...
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewGasolina95E10Label" />

            <TextView
                android:id="@+id/textViewGasolina95E5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/textViewGasolina95E5Label"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/textViewGasolina95E5Label"
                app:layout_constraintTop_toTopOf="@+id/textViewGasolina95E5Label" />
...
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewGasolina98E5Label" />

            <TextView
                android:id="@+id/textViewBiodiesel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/textViewBiodieselLabel"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/textViewBiodieselLabel"
                app:layout_constraintTop_toTopOf="@+id/textViewBiodieselLabel" />
...
